[package]
name = "game"
version = "0.1.0"
edition = "2021"
default-run="game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
rand = "0.8.5"
bevy_mod_raycast = "0.6.2"
noise = "0.7.0"

[[bin]]
name = "game"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3